--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <li><a href="signin.html">Sign in</a></li>
         <li class="nav__profile">
           <div class="avatar">
+            <img src="./" alt="">
+          </div>
             <li><a href="dashboad.html">Dashboad</a></li>
             <li><a href="logout.html">Logout</a></li>
-          </div>
         </li>
       </ul>
       <button id="open__nav-btn" class="uil uil-bars"></button>
