--- a/index.html
+++ b/index.html
@@ -118,6 +118,63 @@
   </div>
 </section>
 
+<!-- FIN DE CATEGORIE -->
+  <section class="footer">
+    <div class="social__container">
+      <a href="" class="social__icon">
+        <i class="uil uil-facebook"></i>
+      </a>
+      <a href="" class="social__icon">
+        <i class="uil uil-instagram"></i>
+      </a>
+      <a href="" class="social__icon">
+        <i class="uil uil-twitter"></i>
+      </a>
+      <a href="" class="social__icon">
+        <i class="uil uil-youtube"></i>
+      </a>
+    </div>
+    <div class="footer__container ">
+<div class="category">
+  <h2>
+    Categories
+  </h2>
+  <h3>Business</h3>
+  <h3>investment</h3>
+  <h3>Entertainment</h3>
+  <h3>Weather</h3>
+  <h3>Sport</h3>
+</div>
+<div class="support">
+  <h2>Support</h2>
+  <h3>Online Supports</h3>
+  <h3>Call numbers</h3>
+  <h3>Emails</h3>
+  <h3>Socials Supports</h3>
+  <h3>Location</h3>
+</div>
+<div class="blog">
+  <h2>Blog</h2>
+  <h3>Safety</h3>
+  <h3>Repair</h3>
+  <h3>Recent</h3>
+  <h3>Popular</h3>
+  <h3>Categories</h3>
+</div>
+<div class="permalinks">
+  <h2>Permaliens</h2>
+  <h3>Home</h3>
+  <h3>Blog</h3>
+  <h3>About</h3>
+  <h3>Services</h3>
+  <h3>Contact</h3>
+</div>
+    </div>
+    <div class="footer__copyright">
+      &copy; 2025 Frankam. All rights reserved.
+      
+    </div>
+  </section>
 
 </body>
 </html>
