burger menu added

--- a/index.html
+++ b/index.html
@@ -172,9 +172,10 @@
     </div>
     <div class="footer__copyright">
       &copy; 2025 Frankam. All rights reserved.
-      
+
     </div>
   </section>
 
+  <script src="./main.js"></script>
 </body>
 </html>
