dashboad and others files added

--- a/blog.html
+++ b/blog.html
@@ -32,10 +32,19 @@
     </div>
   </nav>
   <!-- FIN DE NAV -->
-  
-  
 
-  </section>
+
+<section class="search__bar">
+  <form action="" class="container search__bar-container">
+    <div class="">
+      <i class="uil uil-search"></i>
+      <input type="search" name="" placeholder="Rechercher">
+    </div>
+    <button type="submit" class="btn">OK</button>
+  </form>
+</section>
+
+
 
   <section class="posts">
     <div class="container posts__container">
