--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <img src="./images/people-centered-care-wcd2025.jpg.webp" alt="Image principale de l'article">
       </div>
       <div class="post__info">
-        <a href="#" class="category__button">Wild Life</a>
+        <a href="category-posts.html" class="category__button">Wild Life</a>
         <h2 class="post__title"><a href="./post.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam?</a></h2>
         <p class="post__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab obcaecati possimus ipsa totam rem, at velit minima dolorem maiores corporis veritatis, saepe eum delectus quo ipsam nisi? Corrupti, odit debitis!</p>
         <div class="post__author">
@@ -61,7 +61,7 @@
           <img src="./images/people-centered-care-wcd2025.jpg.webp" alt="Image de l'article sur la faune">
         </div>
         <div class="post__info">
-          <a href="#" class="category__button">Wild Life</a>
+          <a href="category-posts.html" class="category__button">Wild Life</a>
           <h3 class="post__title">
             <a href="post.html">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, iure.</a>
           </h3>
@@ -174,3 +174,5 @@
   <script src="./main.js"></script>
 </body>
 </html>
+
+<!-- 3h33min -->
