--- a/manage-categories.html
+++ b/manage-categories.html
@@ -3,9 +3,156 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Blog App</title>
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <nav>
+    <div class="container nav__container">
+      <a href="index.html" class="nav__logo">Frankam.</a>
+      <ul class="nav__items">
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="signin.html">Sign in</a></li>
+        <li class="nav__profile">
+          <div class="avatar">
+            <img src="./images/people-centered-care-wcd2025.jpg.webp" alt="Avatar de l'utilisateur">
+          </div>
+          <ul>
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="logout.html">Logout</a></li>
+          </ul>
+        </li>
+      </ul>
+      <button id="open__nav-btn" aria-label="Ouvrir le menu"><i class="uil uil-bars"></i></button>
+      <button id="close__nav-btn" aria-label="Fermer le menu"><i class="uil uil-multiply"></i></button>
+    </div>
+  </nav>
+
+<section class="dashboad">
+  <div class="conatiner dashboad__container">
+    <aside>
+      <ul>
+        <li>
+          <a href="add-post.html"><i class="uil uil-pen"></i>
+        <h5>Ajouter un post</h5>
+        </a>
+      </li>
+        <li>
+          <a href="dashboard.html"> <i class="uil uil-postcard"></i>
+        <h5>gerer les posts</h5>
+        </a>
+      </li>
+        <li>
+          <a href="add-user.html"><i class="uil uil-user-plus"></i>
+        <h5>Ajouter un utilisateur</h5>
+        </a>
+      </li>
+        <li>
+          <a href="manage-users.html"><i class="uil uil-pen"></i>
+        <h5>Gerer un utilisateur</h5>
+        </a>
+      </li>
+        <li><a href="add-category.html"><i class="uil uil-user-plus"></i>
+        <h5>Ajouter une categorie</h5>
+        </a></li>
+        <li><a href="manage-categories.html"><i class="uil uil-user-alt"></i>
+        <h5>Gerer les categories</h5>
+        </a></li>
+      </ul>
+    </aside>
+    <main>
+      <h2>Gerer les categories</h2>
+      <table>
+        <thead>
+          <tr>
+
+            <th>Titre</th>
+            <th>Editer</th>
+            <th>Supprimer</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Voyage</td>
+            <td><a href="edit-category.html" class="btn sm">Editer</a></td>
+            <td><a href="delete-category.html" class="btn sm danger">Supprimer</a></td>
+          </tr>
+          <tr>
+            <td>Voyage</td>
+            <td><a href="edit-category.html" class="btn sm">Editer</a></td>
+            <td><a href="delete-category.html" class="btn sm danger">Supprimer</a></td>
+          </tr>
+          <tr>
+            <td>Voyage</td>
+            <td><a href="edit-category.html" class="btn sm">Editer</a></td>
+            <td><a href="delete-category.html" class="btn sm danger">Supprimer</a></td>
+          </tr>
+        </tbody>
+      </table>
+    </main>
+  </div>
+</section>
+
+
+<footer class="footer">
+    <div class="social__container">
+      <a href="#" class="social__icon" aria-label="Facebook">
+        <i class="uil uil-facebook"></i>
+      </a>
+      <a href="#" class="social__icon" aria-label="Instagram">
+        <i class="uil uil-instagram"></i>
+      </a>
+      <a href="#" class="social__icon" aria-label="Twitter">
+        <i class="uil uil-twitter"></i>
+      </a>
+      <a href="#" class="social__icon" aria-label="YouTube">
+        <i class="uil uil-youtube"></i>
+      </a>
+    </div>
+    <div class="footer__container">
+      <div class="category">
+        <h2>Categories</h2>
+        <a href="#" class="footer__link">Business</a>
+        <a href="#" class="footer__link">Investment</a>
+        <a href="#" class="footer__link">Entertainment</a>
+        <a href="#" class="footer__link">Weather</a>
+        <a href="#" class="footer__link">Sport</a>
+      </div>
+      <div class="support">
+        <h2>Support</h2>
+        <a href="#" class="footer__link">Online Support</a>
+        <a href="#" class="footer__link">Call Numbers</a>
+        <a href="#" class="footer__link">Emails</a>
+        <a href="#" class="footer__link">Social Support</a>
+        <a href="#" class="footer__link">Location</a>
+      </div>
+      <div class="blog">
+        <h2>Blog</h2>
+        <a href="#" class="footer__link">Safety</a>
+        <a href="#" class="footer__link">Repair</a>
+        <a href="#" class="footer__link">Recent</a>
+        <a href="#" class="footer__link">Popular</a>
+        <a href="#" class="footer__link">Categories</a>
+      </div>
+      <div class="permalinks">
+        <h2>Permalinks</h2>
+        <a href="#" class="footer__link">Home</a>
+        <a href="#" class="footer__link">Blog</a>
+        <a href="#" class="footer__link">About</a>
+        <a href="#" class="footer__link">Services</a>
+        <a href="#" class="footer__link">Contact</a>
+      </div>
+    </div>
+    <div class="footer__copyright">
+      © 2025 Frankam. All rights reserved.
+    </div>
+  </footer>
+
+  <script src="./main.js"></script>
 </body>
 </html>
+
