--- a/manage-categories.html
+++ b/manage-categories.html
@@ -59,12 +59,12 @@
         <li><a href="add-category.html"><i class="uil uil-user-plus"></i>
         <h5>Ajouter une categorie</h5>
         </a></li>
-        <li><a href="manage-categories.html"><i class="uil uil-user-alt"></i>
+        <li><a href="manage-categories.html" class="active"><i class="uil uil-pen"></i>
         <h5>Gerer les categories</h5>
         </a></li>
       </ul>
     </aside>
-    <main>
+    <main class="main">
       <h2>Gerer les categories</h2>
       <table>
         <thead>
@@ -78,17 +78,17 @@
         <tbody>
           <tr>
             <td>Voyage</td>
-            <td><a href="edit-category.html" class="btn sm">Editer</a></td>
+            <td><a href="edit-category.html" class="btn edit">Editer</a></td>
             <td><a href="delete-category.html" class="btn sm danger">Supprimer</a></td>
           </tr>
           <tr>
-            <td>Voyage</td>
-            <td><a href="edit-category.html" class="btn sm">Editer</a></td>
+            <td>Musique</td>
+            <td><a href="edit-category.html" class="btn edit">Editer</a></td>
             <td><a href="delete-category.html" class="btn sm danger">Supprimer</a></td>
           </tr>
           <tr>
-            <td>Voyage</td>
-            <td><a href="edit-category.html" class="btn sm">Editer</a></td>
+            <td>Divertissement</td>
+            <td><a href="edit-category.html" class="btn edit">Editer</a></td>
             <td><a href="delete-category.html" class="btn sm danger">Supprimer</a></td>
           </tr>
         </tbody>
